--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "miniget": "^4.2.1",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
+    "node-persist": "^3.1.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
     "youtube-dl": "^3.5.0",
