lots of changes for push notification

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon backend --watch index.js"
+    "dev": "set NODE_ENV=development && nodemon backend --watch ./",
+    "prod": "set NODE_ENV=production && nodemon backend --watch ./s"
   },
   "author": "",
   "license": "MIT",
@@ -14,15 +15,21 @@
     "@sentry/integrations": "^6.8.0",
     "@sentry/node": "^6.8.0",
     "cli-progress": "^3.9.0",
+    "cookies": "^0.8.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "https-proxy-agent": "^5.0.0",
     "memory-cache": "^0.2.0",
     "miniget": "^4.2.1",
+    "no-console": "^2.0.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
+    "node-gcm": "^1.0.4",
     "node-persist": "^3.1.0",
+    "node-pushnotifications": "^1.7.1",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "socket.io-cookie": "^0.0.1",
     "youtube-dl": "^3.5.0",
     "youtube-dl-exec": "^1.2.4",
     "ytdl-core": "^4.8.3",
